--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -71,7 +71,7 @@
 		{{> footer/footer}}
 	</div>
 
-	<script src="%=static=%js/main%=hash=%%=min=%.js"></script>
+	<script src="static/js/main%=hash=%%=min=%.js"></script>
 </body>
 
 </html>
