--- a/builds/index.html
+++ b/builds/index.html
@@ -17,7 +17,7 @@
         <link href="undefinedcss/critical.min.css" rel="stylesheet" type="text/css">
         <!--  -->
         <link href="static/css/separate-css/slick-bundle.min.css" rel="stylesheet" type="text/css">
-        <link href="tatic/css/main.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/main.min.css" rel="stylesheet" type="text/css">
 
 
         <link rel="icon" type="image/png" href="fav.png">
