--- a/builds/index.html
+++ b/builds/index.html
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
         <meta name="HandheldFriendly" content="true">
-        <link href="undefinedcss/critical.min.css" rel="stylesheet" type="text/css">
+        <link href="static/css/critical.min.css" rel="stylesheet" type="text/css">
         <!--  -->
         <link href="static/css/separate-css/slick-bundle.min.css" rel="stylesheet" type="text/css">
         <link href="static/css/main.min.css" rel="stylesheet" type="text/css">
