--- a/markup/pages/index.html
+++ b/markup/pages/index.html
@@ -42,7 +42,7 @@
 									Проходишь собеседование <br>с директором закрытого клуба
 								</li>
 							</ul>
-							<ul class="todo">
+							<ul class="todo  todo-md-reverse" >
 								<li  class="todo-last">
 									<div class="todo__num ">
 										<i class="icon-check"></i>
